apps/jenkins/templates/jenkins-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins-vs
  namespace: jenkins
spec:
  gateways:
  - istio-system/internal-gateway
  hosts:
  - "jenkins.internal"
  - "jenkins.jiun2-internal.net"
  http:
  - match:
    - gateways:
      - istio-system/external-gateway
      uri:
        prefix: /jenkins
    rewrite:
      uri: /
    route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
  - match:
    - gateways:
      - istio-system/internal-gateway
    route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
